# opencl-playground

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  gazelle_python.yaml
C/: BUILD.bazel  lol.c  main  opencl_test.c
CXX/: BUILD.bazel  Jacobi_Iteration.cpp  MatrixMultiply.cpp  c++_test_bench.cpp  cl_add_arrays.cpp  cl_jacobi.cl  main  mylib.h  opencl_test_bench.cpp  test  utils.cpp  utils.h
Python/: 1Ddiffusion.py  BUILD.bazel  ConjGradSD.py  Jacobi.py  MatrixMultiply.py  MatrixMultiplyRowDom.py  OpenCLtest2.py  StandardMaxMult.py  backsub.py  test.py  testparamatmul.py  testtt.py
