"""
Module
"""
module(
    name = "opencl_playground",
    version = "0.0.1",
)

bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "gazelle_cc", version = "0.1.0")
bazel_dep(name = "aspect_rules_py", version = "1.6.0")

# Hedron's Compile Commands Extractor for Bazel
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)

bazel_dep(name = "googletest", version = "1.17.0")

# Minimum version needs:
# feat: add interpreter_version_info to py_runtime by @mattem in #1671
bazel_dep(name = "rules_python", version = "1.5.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.9.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.9.13",
    requirements_lock = "//third_party/pip_deps:requirements_lock.txt",
)
use_repo(pip, "pypi")

# The following stanza defines the dependency rules_python_gazelle_plugin.
# For typical setups you set the version.
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.5.1")
